# Genesis

./: .Genesis.cabal.swp  .Main.hs.swp  .gitignore  Design.md  Fib.hs  GMain.hs  GeneAlg.hs  Genesis.cabal  Hacks.hs  Main.hs  MainSpace.hs  Parser.hs  Profiling.hs  README.md  Rewrite.hs  Types.hs  aeson-benchmarksSurvivor.hs  aeson-genesis.out  aeson-genesis.time  alltest.hs  base  best  bintreeSurvivor.hs  callcmd.hs  config.atb  fib4  file  finished.tmp  fr  gcSimulator.tix  gcSimulatorSurvivor.hs  gcbench  gcbench.hs  gennofib.log2  nohup.out  notes.md  out.txt  recover.sh  recurse4  remyBads.sh  (+27 more)
aeson-benchmarks/: .nfs0000000004503239000034b9  .nobang.hs.swp  JsonParse  Main.hs  Mainwbang.hs  README  Rembench.hs  StrictBench.hs  aeson-benchmarks.cabal  aeson-compare.sh  b1.hs  b2.hs  b3.hs  b4.hs  bang.hs  bangs.hs  chicago97t6-zrhs.json.hs  chicago9ksk-na4q.json.hs  chicagoe4sp-itvq.json.hs  chicagohcqp-hyqa.json.hs  chicagorsxa-ify5.json.hs  chicagouxic-zsuj.json.hs  gcmem.sh  gen2.hs  nobang.hs  nobangs.hs  nohup.out  nonrnfgen.hs.bak  nonrnfnobang.hs  out  rnfgen.hs  rnfgen2.hs  rnfnobangs.hs  run.sh  runTenFold.sh  savemain.hs  strictbang.hs  temp  temp.im  temp.js  (+2 more)
aeson-benchmarks/aeson-results/: nonrnfgen.hs
aeson-benchmarks/aesonresults/: argpatch  nonrnfbang.hs  nonrnfgen.hs  rnfgen.hs  rnfnobangs.hs.orig  rnfnobangs.hs.rej
aeson-benchmarks/archive/: AesonLong.hs  AesonNoBang.hs  nonrnfBang.hs  nonrnfbang.hs  rnfbangs.hs
aeson-benchmarks/cursave/: aeson-benchmarks.cabal
aeson-benchmarks/json-data/: chicago7as2-ds3y.json.hs  chicagoezma-pppn.json.hs  chicagouupf-x98q.json.hs  chicagozuxi-7xem.json.hs  midtree.json  objects.json  objectssave  thing.sh  zips.json
aeson-benchmarks/rembench/: Main.hs  rembench.cabal
hillclimb_test/: Main  Main.hs  hillclimb_test.cabal
(+385 files in other folders)
