name:                aeson-benchmarks
version:             0
build-type:          Simple

cabal-version:       >=1.8

flag old-locale
  description: If false then depend on time >= 1.5.
               .
               If true then depend on time < 1.5 together with old-locale.
  default: False

executable aeson-benchmarks
  hs-source-dirs: .
  include-dirs:   include
  main-is: Main.hs
  ghc-options: -O2 -rtsopts
  cpp-options: -DGENERICS
  build-depends:
    attoparsec,
    base,
    bytestring,
    time, 
    criterion, 
    transformers, 
    text, 
    vector, 
    attoparsec >= 0.13.0.1,
    base == 4.*,
    bytestring >= 0.10.4.0,
    containers,
    deepseq,
    dlist >= 0.2,
    ghc-prim >= 0.2,
    hashable >= 1.1.2.0,
    mtl,
    scientific >= 0.3.1 && < 0.4,
    syb,
    template-haskell >= 2.4,
    text >= 1.1.1.0,
    time,
    transformers,
    unordered-containers >= 0.2.3.0,
    vector >= 0.7.1

  if flag(old-locale)
    build-depends: time < 1.5, old-locale
  else
    build-depends: time >= 1.5
