name:                hillclimb-test
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              rem
maintainer:          remy.sucre@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable hillclimb_test
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
  -- hs-source-dirs:      
  ghc-options: -O -rtsopts 
  default-language:    Haskell2010
